// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Factory  > Factory will create instance and collect metadata 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": [
      "context",
    ],
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/base",
      "route": "/test",
      "type": "get",
    },
    "name": "A",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "rawMeta": {
          "key": "id",
          "type": "query",
        },
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "rawMeta": {
          "key": "name",
          "type": "body",
        },
        "type": "body",
      },
    ],
    "rawMeta": {
      "http": {
        "route": "/test",
        "type": "get",
      },
    },
    "tag": "A",
  },
]
`;

exports[`Factory  > In extended case 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test2",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testB",
      "type": "get",
    },
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "rawMeta": {
          "key": "id",
          "type": "query",
        },
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "rawMeta": {
          "key": "name",
          "type": "body",
        },
        "type": "body",
      },
    ],
    "rawMeta": {
      "http": {
        "route": "/testB",
        "type": "get",
      },
    },
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testA",
      "type": "get",
    },
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "rawMeta": {
          "key": "id",
          "type": "query",
        },
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "rawMeta": {
          "key": "name",
          "type": "body",
        },
        "type": "body",
      },
    ],
    "rawMeta": {
      "http": {
        "route": "/testA",
        "type": "get",
      },
    },
    "tag": "B",
  },
]
`;

exports[`Factory  > decorator in extends case 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [
      "A",
      "test",
    ],
    "http": {
      "prefix": "",
      "route": "",
      "type": "post",
    },
    "name": "A",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "pipe": undefined,
        "rawMeta": {
          "key": "",
          "type": "body",
        },
        "type": "body",
      },
    ],
    "rawMeta": {
      "guards": [
        "test",
      ],
      "http": {
        "route": "",
        "type": "post",
      },
    },
    "tag": "A",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {
      "class": "b",
      "method": "b",
    },
    "filter": undefined,
    "func": "test",
    "guards": [
      "A",
      "test",
      "test3",
      "test2",
    ],
    "http": {
      "headers": {
        "b": "b",
        "key": "b",
      },
      "prefix": "",
      "route": "",
      "type": "post",
    },
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "pipe": undefined,
        "rawMeta": {
          "key": "",
          "type": "body",
        },
        "type": "body",
      },
    ],
    "rawMeta": {
      "define": {
        "method": "b",
      },
      "guards": [
        "test",
        "test3",
        "test2",
      ],
      "http": {
        "headers": {
          "b": "b",
          "key": "b",
        },
        "route": "",
        "type": "post",
      },
      "params": [
        {
          "define": {
            "b": "b",
          },
          "index": 0,
        },
      ],
    },
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {
      "class": "c",
      "method": "c",
    },
    "filter": undefined,
    "func": "test",
    "guards": [
      "A",
      "test3",
      "test2",
      "test",
    ],
    "http": {
      "headers": {
        "b": "b",
        "c": "c",
        "key": "c",
      },
      "prefix": "",
      "route": "/test",
      "type": "post",
    },
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "pipe": "C",
        "rawMeta": {
          "key": "",
          "pipe": "C",
          "type": "body",
        },
        "type": "body",
      },
    ],
    "rawMeta": {
      "define": {
        "method": "c",
      },
      "guards": [
        "test3",
        "test2",
        "test",
      ],
      "http": {
        "headers": {
          "b": "b",
          "c": "c",
          "key": "c",
        },
        "route": "/test",
        "type": "post",
      },
      "params": [
        {
          "define": {
            "b": "b",
          },
          "index": 0,
        },
        {
          "define": {
            "c": "c",
          },
          "index": 0,
        },
      ],
    },
    "tag": "C",
  },
]
`;

exports[`Factory  > multple class extends the same class 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test2",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testB",
      "type": "get",
    },
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "rawMeta": {
          "key": "id",
          "type": "query",
        },
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "rawMeta": {
          "key": "name",
          "type": "body",
        },
        "type": "body",
      },
    ],
    "rawMeta": {
      "http": {
        "route": "/testB",
        "type": "get",
      },
    },
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testA",
      "type": "get",
    },
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "rawMeta": {
          "key": "id",
          "type": "query",
        },
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "rawMeta": {
          "key": "name",
          "type": "body",
        },
        "type": "body",
      },
    ],
    "rawMeta": {
      "http": {
        "route": "/testA",
        "type": "get",
      },
    },
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test3",
    "guards": [],
    "http": {
      "prefix": "/C",
      "route": "/testC",
      "type": "get",
    },
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "rawMeta": {
          "key": "id",
          "type": "query",
        },
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "rawMeta": {
          "key": "name",
          "type": "body",
        },
        "type": "body",
      },
    ],
    "rawMeta": {
      "http": {
        "route": "/testC",
        "type": "get",
      },
    },
    "tag": "C",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/C",
      "route": "/testA",
      "type": "get",
    },
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "rawMeta": {
          "key": "id",
          "type": "query",
        },
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "rawMeta": {
          "key": "name",
          "type": "body",
        },
        "type": "body",
      },
    ],
    "rawMeta": {
      "http": {
        "route": "/testA",
        "type": "get",
      },
    },
    "tag": "C",
  },
]
`;
